Fix mobile navigation: Remove display:none that was hiding nav menu on mobile devices

--- a/style.css
+++ b/style.css
@@ -710,10 +710,6 @@ body {
         font-size: var(--font-size-lg);
     }
     
-    .nav-list {
-        display: none;
-    }
-    
     .mobile-menu-toggle {
         display: flex;
     }
